@@ -10,8 +10,11 @@ import com.notio.chat.domain.ChatMessageRole;
 import com.notio.chat.dto.ChatMessageResponse;
 import com.notio.chat.dto.ChatRequest;
 import com.notio.chat.repository.ChatMessageRepository;
-import java.util.ArrayList;
+import com.notio.common.config.properties.NotioAiProperties;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.CancellationException;
+import java.util.concurrent.atomic.AtomicBoolean;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -27,44 +30,70 @@ public class ChatService {
     private final RagRetriever ragRetriever;
     private final PromptBuilder promptBuilder;
     private final LlmProvider llmProvider;
+    private final NotioAiProperties aiProperties;
 
     public ChatService(
             final ChatMessageRepository chatMessageRepository,
             final RagRetriever ragRetriever,
             final PromptBuilder promptBuilder,
-            final LlmProvider llmProvider
+            final LlmProvider llmProvider,
+            final NotioAiProperties aiProperties
     ) {
         this.chatMessageRepository = chatMessageRepository;
         this.ragRetriever = ragRetriever;
         this.promptBuilder = promptBuilder;
         this.llmProvider = llmProvider;
+        this.aiProperties = aiProperties;
     }
 
     public ChatMessageResponse chat(final ChatRequest request) {
         final ChatMessage userMessage = appendMessage(ChatMessageRole.USER, request.content());
-        final String responseText = generateAiResponse(request.content(), userMessage.getUserId());
+        final LlmPrompt prompt = buildChatPrompt(request.content(), userMessage.getUserId());
+        final String responseText = llmProvider.chat(prompt);
         return append(ChatMessageRole.ASSISTANT, responseText);
     }
 
     public SseEmitter streamChat(final ChatRequest request) {
         final ChatMessage userMessage = appendMessage(ChatMessageRole.USER, request.content());
-        final String responseText = generateAiResponse(request.content(), userMessage.getUserId());
-        final SseEmitter emitter = new SseEmitter(30_000L);
+        final LlmPrompt prompt = buildChatPrompt(request.content(), userMessage.getUserId());
+        final SseEmitter emitter = new SseEmitter(aiProperties.streamingTimeout().toMillis());
+        final AtomicBoolean active = new AtomicBoolean(true);
 
-        new Thread(() -> {
+        emitter.onCompletion(() -> active.set(false));
+        emitter.onTimeout(() -> active.set(false));
+        emitter.onError(exception -> active.set(false));
+
+        Thread.startVirtualThread(() -> {
+            final StringBuilder assistantContent = new StringBuilder();
             try {
-                final String[] chunks = splitIntoChunks(responseText);
-                for (final String chunk : chunks) {
-                    emitter.send(SseEmitter.event().name("chunk").data(chunk));
-                    Thread.sleep(50);
+                llmProvider.stream(prompt, chunk -> {
+                    if (!active.get()) {
+                        throw new CancellationException("SSE client disconnected");
+                    }
+                    assistantContent.append(chunk);
+                    sendChunk(emitter, chunk);
+                });
+
+                if (!active.get()) {
+                    return;
                 }
-                emitter.send(SseEmitter.event().name("done").data("[DONE]"));
-                append(ChatMessageRole.ASSISTANT, responseText);
+
+                final ChatMessage assistantMessage = appendMessage(
+                        ChatMessageRole.ASSISTANT,
+                        assistantContent.toString().trim()
+                );
+                emitter.send(SseEmitter.event()
+                        .name("done")
+                        .data(Map.of("done", true, "message_id", assistantMessage.getId())));
                 emitter.complete();
+            } catch (CancellationException exception) {
+                active.set(false);
             } catch (Exception exception) {
-                emitter.completeWithError(exception);
+                if (active.get()) {
+                    emitter.completeWithError(exception);
+                }
             }
-        }).start();
+        });
 
         return emitter;
     }
@@ -88,29 +117,21 @@ public class ChatService {
         return chatMessageRepository.save(message);
     }
 
-    private String generateAiResponse(final String userMessage, final Long userId) {
+    private LlmPrompt buildChatPrompt(final String userMessage, final Long userId) {
         final List<RagDocument> documents = ragRetriever.retrieve(userId, userMessage);
         final List<ChatMessage> recentMessages = chatMessageRepository.findRecentByUserId(
                 userId,
                 PageRequest.of(0, 10)
         );
-        final LlmPrompt prompt = promptBuilder.buildChatPrompt(userMessage, documents, recentMessages);
-        return llmProvider.chat(prompt);
+        return promptBuilder.buildChatPrompt(userMessage, documents, recentMessages);
     }
 
-    private String[] splitIntoChunks(final String text) {
-        final List<String> chunks = new ArrayList<>();
-        final String[] words = text.split("\\s+");
-
-        for (int i = 0; i < words.length; i += 3) {
-            final StringBuilder chunk = new StringBuilder();
-            for (int j = i; j < Math.min(i + 3, words.length); j++) {
-                chunk.append(words[j]).append(" ");
-            }
-            chunks.add(chunk.toString().trim());
+    private void sendChunk(final SseEmitter emitter, final String chunk) {
+        try {
+            emitter.send(SseEmitter.event().name("chunk").data(chunk));
+        } catch (Exception exception) {
+            throw new CancellationException("SSE client disconnected");
         }
-
-        return chunks.toArray(new String[0]);
     }
 }
 
